@@ -5,8 +5,7 @@ import com.codeborne.selenide.SelenideElement;
 import io.qameta.allure.Step;
 import org.openqa.selenium.Keys;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 
 import static com.codeborne.selenide.Selenide.$x;
 import static com.codeborne.selenide.Selenide.sleep;
@@ -23,15 +22,12 @@ public class ConnectorDetails {
     protected SelenideElement contentTextArea = $x("//textarea[@class='ace_text-input']");
     protected SelenideElement taskTab = $x("//a[contains(text(),'Tasks')]");
     protected SelenideElement configTab = $x("//a[contains(text(),'Config')]");
-    protected SelenideElement overviewTab = $x("//a[contains(text(),'Overview')]");
     protected SelenideElement configField = $x("//div[@id='config']");
-    protected List<SelenideElement> navigationElements = new ArrayList<>();
 
     @Step
     public ConnectorDetails waitUntilScreenReady() {
         loadingSpinner.shouldBe(Condition.disappear);
-        navigationElements.addAll(List.of(taskTab, configTab, overviewTab));
-        navigationElements.forEach(elementsMenu -> elementsMenu.shouldBe(Condition.visible));
+        Arrays.asList(taskTab,configTab).forEach(elementsMenu -> elementsMenu.shouldBe(Condition.visible));
         return this;
     }
 
@@ -43,11 +39,11 @@ public class ConnectorDetails {
 
     @Step()
     public ConnectorDetails setConfig(String configJson) {
-        configField.shouldBe(Condition.visible).click();
+        configField.shouldBe(Condition.enabled).click();
         contentTextArea.sendKeys(Keys.LEFT_CONTROL + "a");
         contentTextArea.setValue("");
         contentTextArea.setValue(String.valueOf(configJson.toCharArray()));
-        configField.shouldBe(Condition.visible).click();
+        configField.shouldBe(Condition.enabled).click();
         clickByJavaScript(submitBtn);
         sleep(4000);
         log.info("Connector config is submitted");
@@ -61,13 +57,13 @@ public class ConnectorDetails {
     }
 
     @Step()
-    public ConnectorDetails clickDeleteButton() {
+    public ConnectorDetails clickDeleteBtn() {
         clickByJavaScript(deleteBtn);
         return this;
     }
 
     @Step()
-    public ConnectorDetails clickConfirmButton() {
+    public ConnectorDetails clickConfirmBtn() {
         confirmBtnMdl.shouldBe(Condition.enabled).click();
         confirmBtnMdl.shouldBe(Condition.disappear);
         return this;
@@ -76,8 +72,8 @@ public class ConnectorDetails {
     @Step()
     public ConnectorDetails deleteConnector() {
         openDotMenu();
-        clickDeleteButton();
-        clickConfirmButton();
+        clickDeleteBtn();
+        clickConfirmBtn();
         return this;
     }
 }
